--- a/index.html
+++ b/index.html
@@ -5,70 +5,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Street Couture</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        .product-image {
-            width: 100%;
-            height: auto;
-        }
-        .product-gallery img {
-            width: 100px;
-            height: auto;
-            cursor: pointer;
-            margin-right: 10px;
-        }
-        .size-options .btn {
-            margin-right: 10px;
-        }
-        .custom-container {
-            background-color: #138D75; 
-            padding: 20px;
-            border-radius: 10px;
-        }
-    </style>
+     <!-- Favicon -->
+     <link rel="icon" type="image/x-icon" href="imagenes/icono.png">
+     <!-- Bootstrap -->
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+     <!-- Iconos de Bootstrap -->
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+     <!-- CSS -->
+     <link href="style.css" rel="stylesheet">
+     <!-- Google Fonts -->
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&family=Rubik+Dirt&family=Share+Tech+Mono&display=swap" rel="stylesheet">
+   </head>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <body>
+    <nav class="navbar navbar-expand-md navbar-light navbar-custom">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Street Couture</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Inico</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Recien llegados</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Ropa
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbar-toggler">
+              <a class="navbar-brand" href="#">
+                  <img src="img/Str.png" width="50" alt="Logo de la página web">
               </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Playeras</a></li>
-                <li><a class="dropdown-item" href="#">Sudaderas</a></li>
-                <li><a class="dropdown-item" href="#">Calcetas</a></li>
+              <ul class="navbar-nav d-flex justify-content-center align-items-center">
+                  <a class="btn btn-custom-primary" href="#" role="button">Inicio</a>
+                  <li class="nav-item">
+                      <a class="btn btn-custom-primary" href="#" role="button">Recién llegados</a>
+                  </li>
+                  <div class="dropdown">
+                      <button class="btn btn-custom-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          Ropa
+                      </button>
+                      <ul class="dropdown-menu">
+                          <li><a class="dropdown-item" href="#">Playeras</a></li>
+                          <li><a class="dropdown-item" href="#">Sudaderas</a></li>
+                          <li><a class="dropdown-item" href="#">Calcetas</a></li>
+                      </ul>
+                  </div>
+                  <div class="dropdown">
+                      <button class="btn btn-custom-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          Accesorios
+                      </button>
+                      <ul class="dropdown-menu">
+                          <li><a class="dropdown-item" href="#">Gorras</a></li>
+                          <li><a class="dropdown-item" href="#">Lentes</a></li>
+                          <li><a class="dropdown-item" href="#">Mochila</a></li>
+                      </ul>
+                  </div>
               </ul>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Accesorios
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Gorras</a></li>
-                <li><a class="dropdown-item" href="#">Lentes</a></li>
-                <li><a class="dropdown-item" href="#">Mochila</a></li>
-              </ul>
-            </li>
-          </ul>
-          <form class="d-flex" role="search">
-            <input class="form-control me-2" type="Busca aqui tu producto" placeholder="Busca aqui tu producto" aria-label="Busca aqui tu producto">
-            <button class="btn btn-outline-success" type="submit">Buscar</button>
-          </form>
-        </div>
+              <form class="d-flex" role="search">
+                  <input class="form-control me-2" type="Busca aquí tu producto" placeholder="Busca aquí tu producto" aria-label="Busca aquí tu producto">
+                  <button class="btn btn-custom-outline-success" type="submit">Buscar</button>
+              </form>
+          </div>
       </div>
-    </nav>
   </nav>
 
     <div class="container mt-5">
@@ -130,11 +123,25 @@
                 </div>
               </div>
             </div>
-    <footer class="bg-light text-center text-lg-start mt-5">
-        <div class="text-center p-3">
-            © 2023
-        </div>
+
+    <!-- Pie de pagina (footer) -->
+     <footer class="seccion-oscura d-flex flex-column align-items-center justify-content-center"> 
+      <img class="footer-logo" src="img/Str.png"alt="Logo del portafolio">
+      <p class="footer-texto text-center">Street Couture</p>
+      <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
+        <a href="#" target="_blank" rel="noopener noreferrer">
+          <i class="bi bi-twitter"></i>
+        </a>
+        <a href="https://www.instagram.com/dmep09/" target="_blank" rel="noopener noreferrer">
+          <i class="bi bi-instagram"></i>
+        </a>
+        <a href="mailto:Dannaevelyn123mp@gmail.com" target="_blank" rel="noopener noreferrer">
+          <i class="bi bi-envelope"></i>
+        </a>
+      </div>
+      <div class="derechos-de-autor">© 2023 &#169;</div>
     </footer>
+  </body>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
